2011-07-08  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* ItkToolbox/ItkPSTransform.cpp:

	- (v0.2.1) Fix bug. The parameterization cannot be the x
	points. They need to be translated and scaled so that they fit
	within a [0, 1] x [0, 1] x [0, 1] bounding box.

2011-07-07  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* Add test/ps-bent-vessel-3d-3.mat, with the coordinates of the
	voxels of a 3D bent vessel segmentation, its skeleton, and a
	parameterization of the skeleton.

	* ItkToolbox/ItkPSTransform.cpp:

	- (v0.2.0) Add warping with a B-spline, using
	itk::BSplineScatteredDataPointSetToImageFilter.

	* ItkToolbox/ItkImFilter.cpp:

	- (v0.3.10) Remove paragraph from help header about MATLAB_ROOT
	(no longer necessary to set the variables thanks to the modified
	FindMatlab.cmake).

	* ItkToolbox/DanielssonFilter.cpp:

	- (v0.3.1) mxGetPr should only be used for arrays of type double,
	so replace it by mxGetData.

	* ItkToolbox/BaseFilter.cpp:

	- (v0.3.2) mxGetPr should only be used for arrays of type double,
	so replace it by mxGetData.

2011-07-06  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* ItkToolbox/ItkPSTransform.cpp:

	- (v0.1.1) Add support for 2D points, so that not only 3D points
	are accepted.

	* Add test/nrrd-bent-vessel-3d* files with the segmentation and
	skeleton of 2 bent vessels in 3D.

2011-07-05  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* Add test/test_itk_pstransform.m:

	- Script to test itk_pstransform().

	* Delete ItkToolbox/ItkKernelTransform.cpp:

	- Its functionality is now part of ItkPSTransform.cpp.

	* ItkToolbox/CMakeLists.txt:

	- Add compilation and installation of itk_pstransform.

	- Remove itk_kernel_transform, that is now part of
	itk_pstransform.

	* ItkToolbox/ItkPSTransform.cpp:

	- (v0.1.0) Basic code to replicate the functionality of
	ItkKernelKernelTransform.cpp, but with the infrastructure to make
	it possible to add the bpline warping method. As an improvement